--- a/doc/examples/Makefile
+++ b/doc/examples/Makefile
@@ -1,5 +1,7 @@
 EXAMPLES-$(CONFIG_AVIO_DIR_CMD_EXAMPLE)      += avio_dir_cmd
 EXAMPLES-$(CONFIG_AVIO_READING_EXAMPLE)      += avio_reading
+EXAMPLES-$(CONFIG_CAMM_DEMUXING_EXAMPLE)     += camm_demuxing
+EXAMPLES-$(CONFIG_CAMM_MUXING_EXAMPLE)       += camm_muxing
 EXAMPLES-$(CONFIG_DECODE_AUDIO_EXAMPLE)      += decode_audio
 EXAMPLES-$(CONFIG_DECODE_VIDEO_EXAMPLE)      += decode_video
 EXAMPLES-$(CONFIG_DEMUXING_DECODING_EXAMPLE) += demuxing_decoding
